--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "start" :"node server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+   "engines" : { 
+    "npm" : ">=8.19.3",
+    "node" : ">=18.12.1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
